fix: sidebar issues on responsiveness and bottom-nav z-index.

--- a/frontend/esmis/src/app/_mixins.scss
+++ b/frontend/esmis/src/app/_mixins.scss
@@ -13,7 +13,7 @@
   }
 
   // Media queries
-  @media (max-width: 991px) {
+  @media (max-width: 1024px) {
     margin-left: 0;
     padding: 16px;
     padding-top: calc(4rem + 16px);
