--- a/frontend/esmis/src/app/mobile-nav/mobile-nav.component.scss
+++ b/frontend/esmis/src/app/mobile-nav/mobile-nav.component.scss
@@ -172,6 +172,7 @@
   overflow: visible;
   border-radius: 16px 16px 0 0;
   transition: transform 0.3s ease-in-out;
+  z-index: 1050;
 
   &.nav-hidden {
     transform: translateY(120%);
