--- a/frontend/esmis/src/app/top-nav/top-nav.scss
+++ b/frontend/esmis/src/app/top-nav/top-nav.scss
@@ -17,7 +17,15 @@
   align-items: center;
   transition: left 0.3s ease;
 
-  @media (max-width: 991px) {
+  .hamburger-btn {
+    display: none;
+
+    @media (max-width: 1024px) {
+      display: block;
+    }
+  }
+
+  @media (max-width: 1024px) {
     left: 0;
     padding-right: 0;
     
